--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /*  your css code here. If applicable */
+body{
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5
+}
+.testimonial-section{
+background : #f5f5f5;
+padding : 40px;
+display : flex;
+flex-direction : column;
+	gap : 40px;
+}
+.testimonial{
+	padding : 10px;
+	border : 1px solid #ddd;
+	background : #ffffff;
+	border-radius : 5px;
+
+	
+}
+.testimonial-text{
+	font-size : 20px;
+	line-height : 1.5;
+	color : #333;
+}
+.testimonial-author{
+	text-align : right;
+	font-style : italic;
+	color : #555;
+	margin-top: 10px;
+	
+}
+#heading{
+font-size : 40px;
+margin-bottom : 0
+}
