--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,37 @@
-/*  your css code here. If applicable */
 body{
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f5f5f5
+	margin : 0;
+	padding : 0;
+	background : #f5f5f5;
 }
 .testimonial-section{
-background : #f5f5f5;
-padding : 40px;
-display : flex;
-flex-direction : column;
-	gap : 40px;
+	padding : 40px;
+	display : flex;
+	flex-direction : column;
+	gap : 20px;
 }
-.testimonial{
-	padding : 10px;
+.testimonial-section div{
+	padding : 20px;
 	border : 1px solid #ddd;
 	background : #ffffff;
-	border-radius : 5px;
-
-	
+	color : #555;
 }
-.testimonial-text{
-	font-size : 20px;
-	line-height : 1.5;
-	color : #333;
-}
-.testimonial strong {
-      display: block;
+.testimonial-section div:nth-child(2)::after{
+	content : "~John Doe";
+	display: block;
       text-align: right;
-      font-style: italic;;
+      font-style: italic;
       color: #333;
-	  font-size : 15px;
-	font-weight : normal;
-	
       margin-top: 10px;
-    }
-	
 }
-#heading{
-font-size : 40px;
-margin-bottom : 0
+	.testimonial-section div:nth-child(3)::after{
+	content : "~Jane Smith";
+	display: block;
+      text-align: right;
+      font-style: italic;
+      color: #333;
+      margin-top: 10px;
+}
+h1{
+	font-size : 40px;
+	margin-bottom : 0
 }
