--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,16 @@
-body{
-	margin : 0;
-	padding : 0;
-	background : #f5f5f5;
+
+.mainContainer{
+	padding: 10px;
+	background-color: #f5f5f5;
 }
-.testimonial-section{
-	padding : 40px;
-	display : flex;
-	flex-direction : column;
-	gap : 20px;
+.testimonial{
+	padding: 10px;
+	background-color: white;
+	border: 1px solid black;
+	color: black;
+	margin-bottom: 10px
 }
-.testimonial-section div{
-	padding : 20px;
-	border : 1px solid #ddd;
-	background : #ffffff;
-	color : #555;
-}
-.testimonial-section div:nth-child(2)::after{
-	content : "~John Doe";
-	display: block;
-      text-align: right;
-      font-style: italic;
-      color: #333;
-      margin-top: 10px;
-}
-	.testimonial-section div:nth-child(3)::after{
-	content : "~Jane Smith";
-	display: block;
-      text-align: right;
-      font-style: italic;
-      color: #333;
-      margin-top: 10px;
-}
-h1{
-	font-size : 40px;
-	margin-bottom : 0
+.author{
+	text-align: right;
+	font-style: italic;
 }
